--- a/LMS_Backend/src/main/resources/application.properties
+++ b/LMS_Backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.datasource.url=jdbc:mariadb://localhost:3306/lms
+
+spring.datasource.username=raj
+
+spring.datasource.password=raj
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+
